src/snapshots/afrotd__parser__tests__interpretation_html_9.2.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball spielbereit ist und sich der Umpire (oder der
            Center Judge) in seiner regulären Position befindet, ersetzt Team A
            schnell einige Spieler durch Ersatzspieler, steht die erforderliche
            Sekunde still und snappt den Ball. Der Umpire versucht, zum Ball zu
            gelangen, um der Defense zu erlauben, ebenfalls auszuwechseln,
            schafft es aber nicht, den Snap zu verhindern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Down muss unterbrochen, die Game Clock angehalten und der
                Defense erlaubt werden, ihre Auswechselungen in Reaktion auf
                Team A’s schneller Auswechselung vorzunehmen. Team A wird beim
                ersten Verstoß mit einer 5-Meterstrafe für eine
                Spielverzögerung belegt. Die Play Clock wird auf 25 Sekunden
                gesetzt und startet mit der Ballfreigabe. Die Game Clock
                startet mit der Ballfreigabe oder dem Snap, je nachdem wie ihr
                Status war, als das Play beendet wurde. Wenn es sich um den
                ersten Verstoß dieser Art handelt, informiert der Referee den
                Head Coach, dass der nächste Verstoß in einer 15-Meterstrafe
                für unsportliches Verhalten gemäß Regel 9.2.3 resultiert (Regel
                3.5.2).
            </p>
        </details>
    </div>
</article>
