src/snapshots/afrotd__parser__tests__interpretation_html_9.2.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A liegt neun Punkte zurück und hat einen 1. und 10 an der
            B-22. Die Game Clock zeigt 0:35. Beim Snap halten B21, B40 und B44
            die beiden Team A-Ends offensichtlich fest, indem sie diese mit den
            Armen umfassen und zu Boden ziehen. Quarterback A12 kann keinen
            freien Receiver finden und muss seinen Gegnern ausweichen. Er wirft
            letztendlich den Ball legal weg. Nach diesem Down steht die Game
            Clock bei 0:26. Es liegen Flaggen auf dem Feld für das Halten an
            den berechtigten Receivern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das ist ein offensichtlicher und eklatant unfairer Akt mit dem
                Ziel, Zeit von der Game Clock zu nehmen. Der Referee ändert das
                Foul für das Festhalten zu einem unsportlichen Verhalten-Foul.
                Die Strafe wird mit Distanzhalbierung zu Team B’s Goalline
                durchgeführt. Team A hat einen 1. und 10 an der B-11. Die Game
                Clock wird auf 0:35 zurückgesetzt und startet mit dem Snap. Für
                B21, B40 und B44 erhöht sich der UNV-Zähler jeweils ein
                unsportliches Verhalten-Foul.
            </p>
        </details>
    </div>
</article>
