src/snapshots/afrotd__parser__tests__interpretation_html_9.2.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A liegt mit vier Punkten vorn und hat einen 4. und 10 an der
            A-30 mit 0:14 auf der Game Clock in der letzten Spielperiode. A12
            befindet sich neun Meter hinter der neutralen Zone. Er erhält den
            Snap, geht zurück in Richtung der eigenen Goalline und verlässt die
            Tackle Box. Beim Snap halten die Team A-Linemen offensichtlich die
            Team BSpieler vor sich fest und verhindern so, dass diese sofort
            dem Passer hinterherlaufen können. Als die Defender sich
            schließlich A12 nähern, wirft dieser den Ball hoch, so dass dieser
            jenseits der Scrimmage Line im Aus landet. Als der Ball auf den
            Boden prallt, steht die Game Clock bei 0:00. Umpire und Referee
            haben jeweils eine Flagge für das Festhalten durch Team A.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das ist ein offensichtlicher und eklatant unfairer Akt mit dem
                Ziel, Zeit von der Game Clock zu nehmen. Der Referee ändert das
                Foul für das absichtliche Halten zu einem unsportlichen
                Verhalten-Foul. Die Strafe wird mit 15 Metern vom Previous Spot
                durchgeführt. Team A’s Ball, 4. und 25 von der A-15. Die Game
                Clock wird auf 0:14 zurückgesetzt und startet mit dem Snap. Für
                alle Team A-Linemen erhöht sich der UNV-Zähler um jeweils ein
                unsportliches Verhalten-Foul.
            </p>
        </details>
    </div>
</article>
