src/snapshots/afrotd__parser__tests__interpretation_html_9.2.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-25 mit 0:01 verbleibender Spielzeit und Team A
            liegt mit 5 Punkten zurück. A12 wirft einen vollständigen Pass zu
            A88 in der Mitte des Feldes. Nach dem Fangen durch A88 erfolgt eine
            Reihe von Rückwärtspässen, die den Ball im Besitz von Team A im
            Spiel halten. Schließlich wirft A21 einen Rückpass in Richtung
            Teammitglied A44 und der Ball fällt auf den Boden und bleibt
            unberührt liegen. Teammitglieder von Team B stürmen im Glauben,
            dass der Ball dead ist, auf das Feld. A44 recovert den Ball,
            beginnt zu laufen und wird dabei von den Teammitgliedern von B auf
            dem Feld behindert, dreht um und wird letztendlich von B50 an der
            B-30 getackelt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Ersatzspieler, Coach oder eine andere Person, die den
                Regeln unterliegt, außer einem Spieler oder einem
                Schiedsrichter, darf in irgendeiner Weise auf den Ball oder
                einen Spieler einwirken, solange der Ball im Spiel ist. Diese
                unfaire Aktion wird mit einer 15-Meterstrafe als Live Ball Foul
                geahndet. Der Referee kann jede Strafe verhängen, die er für
                angemessen hält, einschließlich der Vergabe von Punkten.
            </p>
        </details>
    </div>
</article>
