src/snapshots/afrotd__parser__tests__interpretation_html_9.2.5_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.5.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Während ein Kickoff weit zurückgetragen wird, muss der Sidejudge
            stoppen und um den Head Coach herumlaufen, der sich außerhalb der
            Coaching Box in der Schiedsrichterzone oder auf dem Spielfeld in
            der Nähe der Seitenlinie befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul für unsportliches Verhalten. Als Dead Ball Foul
                durchführen. Die 15-Meterstrafe wird vom Succeeding Spot
                geahndet. Das UNV-Foul wird dem Head Coach zugerechnet und
                erhöht seinen UNV-Zähler, wobei das zweite UNV-Foul zu seiner
                Disqualifikation führt.
            </p>
        </details>
    </div>
</article>
