src/snapshots/afrotd__parser__tests__interpretation_html_9.3.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei dem Versuch, weiteren Raumgewinn zu erzielen, wird Ballträger
            A44 durch einige Defense Spieler aufgehalten, als sie versuchen,
            A44 zu tackeln. Back A22 (a) legt seine Hände auf den Rücken von
            A44 und drückt diesen vorwärts; (b) drückt gegen die Ansammlung von
            Mitspielern, die sich um A44 herum befinden; (c) ergreift A44’s Arm
            und versucht, ihn zu weiterem Raumgewinn vorwärts zu ziehen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a und b) Legales Spiel. Drücken des Ballträgers oder Drücken
                gegen die Ansammlung um den Ballträger ist kein Foul. (c) Foul
                für illegale Unterstützung für den Ballträger. 5-Meterstrafe
                nach dem Dreiund-Eins-Prinzip (Regel 9.3.2.b).
            </p>
        </details>
    </div>
</article>
