src/snapshots/afrotd__parser__tests__interpretation_html_9.3.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A6 trägt den Ball. Während seines Laufes drückt A12 B2 heftig und
            hart in den Rücken über der Gürtellinie.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler Block in den Rücken. Strafe – 10 Meter.
            </p>
        </details>
    </div>
</article>
