src/snapshots/afrotd__parser__tests__interpretation_html_9.3.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während ein Mitspieler des Passers oder Ballträgers sich hinter der
            neutralen Zone befindet, hält er seine Arme parallel zum Boden und
            berührt einen Gegner oberhalb der Schultern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegales Benutzen der Hände. Strafe – 10 Meter bei illegalem
                Benutzen der Hände oder 15 Meter für ein persönliches Foul.
                Strafdurchführung vom Previous Spot. Safety, wenn sich das Foul
                hinter Team A’s Goalline ereignet.
            </p>
        </details>
    </div>
</article>
