src/snapshots/afrotd__parser__tests__interpretation_html_9.3.3_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.3.V
        </p>
    </div>
    <div class="message-body">
        <p>
            A2 berührt B2 mit einem legalen Block. B2 dreht sich, um dem Block
            durch A2 zu entgehen. Dabei berühren A2’s Hände den Rücken von B2.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legaler Block.
            </p>
        </details>
    </div>
</article>
